--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,7 @@ a.btn {
 }
 
 .nav>li>a {
-  padding:10px 22px;
+  padding:10px 21px;
   font-size: 17px;
 }
 
@@ -230,6 +230,7 @@ svg:not(:root) {
 
 .full-section-1 {
   padding-top: 5px;
+  padding-bottom: 50px;
 }
 
 .full-section-2 {
