--- a/bges/css/main.css
+++ b/bges/css/main.css
@@ -435,7 +435,8 @@ footer .social-net ul li {
 }
 
   address{
-    margin-top: 20px;
+    margin: 20px auto 0;
+    text-align: center;
   }
 
 .carousel-caption {
@@ -484,7 +485,7 @@ footer .social-net ul li {
 
 @media (max-width: 767px) {
   .section-1 {
-    margin-top: 40px;
+    margin-bottom:40px;
 }
   #myCarousel,
   .navbar-wrapper .social-net,
@@ -501,7 +502,8 @@ footer .social-net ul li {
     border: none;
     float: left; }
   .navbar-inverse {
-    margin: 0; }
+    margin: 0;
+    padding-bottom: 30px; }
   .container > .navbar-collapse {
     margin: 35px 0 0 0; }
   .section-info .row {
