--- a/castlennest/css/main.css
+++ b/castlennest/css/main.css
@@ -271,13 +271,10 @@ svg:not(:root) {
   border: none;
   padding: 15px;
   text-align: right; }
-
-.section-1 .panel-body p {
-  font-size: 14px;
-  margin: 15px 0 0 0; }
-
-.section-1 .panel-heading h4 {
-  margin-bottom: 20px; }
+  .section-1 .panel-body p {
+    font-size: 14px;
+    margin: 15px 0 0 0;
+    font-family: josefin_sansbold; }
 
 .section-1 .panel-heading {
   border: none;
@@ -285,10 +282,11 @@ svg:not(:root) {
   background: #f9c425;
   margin: 85px 0 0 0;
   border-radius: 0; }
-
-.section-1 .panel-heading img {
-  width: 100%;
-  margin-top: -15px; }
+  .section-1 .panel-heading h4 {
+    margin-bottom: 20px; }
+  .section-1 .panel-heading img {
+    width: 100%;
+    margin-top: -15px; }
 
 .full-section-3 {
   padding: 70px 0;
@@ -296,40 +294,74 @@ svg:not(:root) {
 
 .section-info {
   margin-bottom: 55px; }
-
-.section-info .divider {
-  border-right: 1px solid #c6c6c6;
-  border-left: 1px solid #c6c6c6; }
-
-.section-info .panel-heading,
-.section-info .panel-body {
-  border: none;
-  text-align: center; }
-
-.section-info .row {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex; }
-
-.section-info .row > [class*='col-'] {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  padding-bottom: 45px;
-  margin-top: 55px; }
-
-.section-info .panel-body p {
-  line-height: 30px; }
+  .section-info .row {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex; }
+    .section-info .row > [class*='col-'] {
+      display: flex;
+      flex-direction: column; }
+  .section-info .panel {
+    position: relative;
+    padding-bottom: 15px;
+    margin-top: 55px;
+    height: calc(100%); }
+  .section-info .panel-body p {
+    line-height: 30px;
+    font-family: josefin_sansbold; }
+  .section-info .btn {
+    position: absolute;
+    bottom: -20px;
+    left: 50%;
+    margin-left: -46px; }
+  .section-info .panel-heading, .section-info .panel-body {
+    border: none;
+    text-align: center;
+    font-family: josefin_sansbold; }
 
 .btn {
   font-weight: bold; }
 
-.section-info .btn {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  margin-left: -46px; }
+.about-cn {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  width: 100%; }
+  .about-cn .col-half {
+    width: 50%;
+    display: inline-block;
+    padding: 4em 2em; }
+  .about-cn .about-desc h2 {
+    font-size: 40px;
+    font-family: amatic_scregular; }
+  .about-cn .about-desc p {
+    font-family: josefin_sansbold; }
+  .about-cn .about-desc ul {
+    margin-left: 20px; }
+    .about-cn .about-desc ul li {
+      list-style: none outside square; }
+
+@media screen and (max-width: 768px) {
+  .about-cn .col-half {
+    width: 100%;
+    padding: 1em; }
+  .about-cn .col-half.about-cn-img {
+    height: 300px; } }
+
+.about-cn .about-desc {
+  background: #fff;
+  padding: 3em; }
+
+@media screen and (max-width: 768px) {
+  .about-cn .about-desc {
+    padding: 2em; } }
 
 .icon-circle {
   width: 105px;
