--- a/castlennest/scss/main.scss
+++ b/castlennest/scss/main.scss
@@ -337,32 +337,32 @@ svg:not(:root) {
 	padding-bottom: 55px;
 }
 
-.section-1 .panel-body {
-	border: none;
-	padding: 15px;
-	text-align: right;
-}
+.section-1 {
+	.panel-body {
+		border: none;
+		padding: 15px;
+		text-align: right;
+		p {
+			font-size: 14px;
+			margin: 15px 0 0 0;
+			font-family: josefin_sansbold;
+		}
+	}
+	.panel-heading {
+		border: none;
+		padding: 0 0 0 5px;
+		background: #f9c425;
+		margin: 85px 0 0 0;
+		border-radius: 0;
+		h4 {
+			margin-bottom: 20px;
+		}
 
-.section-1 .panel-body p {
-	font-size: 14px;
-	margin: 15px 0 0 0;
-}
-
-.section-1 .panel-heading h4 {
-	margin-bottom: 20px;
-}
-
-.section-1 .panel-heading {
-	border: none;
-	padding: 0 0 0 5px;
-	background: #f9c425;
-	margin: 85px 0 0 0;
-	border-radius: 0;
-}
-
-.section-1 .panel-heading img {
-	width: 100%;
-	margin-top: -15px;
+		img {
+			width: 100%;
+			margin-top: -15px;
+		}
+	}
 }
 
 .full-section-3{
@@ -370,49 +370,96 @@ svg:not(:root) {
   background:#fff;
 }
 
-.section-info{
-  margin-bottom:55px;
-}
-.section-info .divider{
-  border-right:1px solid #c6c6c6;
-  border-left:1px solid #c6c6c6;
-}
+.section-info {
+	margin-bottom: 55px;
+	.row {
+		display: -webkit-box;
+		display: -webkit-flex;
+		display: -ms-flexbox;
+		display: flex;
+		& > [class*='col-'] {
+			display: flex;
+			flex-direction: column;
+		}
+	}
+	.panel{
+		position: relative;
+			padding-bottom: 15px;
+			margin-top: 55px;
+			height: calc(100%);
+	}
+	.panel-body {
+		p {
+			line-height: 30px;
+			font-family: josefin_sansbold;  
+		}
+	}
 
-.section-info .panel-heading,
-.section-info .panel-body {
+	.btn{
+		position: absolute;
+		bottom:-20px;
+		left: 50%;
+		margin-left: -46px;
+	   }
+
+	   .panel-heading, .panel-body {
 	border: none;
-	text-align: center
+	text-align: center;
+	font-family: josefin_sansbold;
 }
-
-
-.section-info .row {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display:         flex;
-}
-.section-info .row > [class*='col-'] {
-   display: flex;
-   flex-direction: column;
-   position: relative;
-   padding-bottom:45px;
-   margin-top: 55px;
-}
-
-.section-info .panel-body p{
-	line-height:30px;
 }
 
 .btn{
 	font-weight: bold;
 }
 
-.section-info .btn{
- position: absolute;
- bottom:0;
- left: 50%;
- margin-left: -46px;
+
+.about-cn {
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+	-moz-flex-wrap: wrap;
+	width: 100%;
+	.col-half {
+		width: 50%;
+		display: inline-block;
+		padding: 4em 2em;
+	}
+	.about-desc{
+		h2 {
+			font-size: 40px;   
+			font-family: amatic_scregular;}	
+			p{
+		font-family: josefin_sansbold; 
+	}
+	ul{margin-left: 20px;
+	li {
+		list-style: none outside square; 
+	}}
+	}
+
 }
+
+@media screen and (max-width: 768px) {
+	.about-cn .col-half {
+	  width: 100%;
+	  padding: 1em; }
+	  .about-cn .col-half.about-cn-img {
+		height: 300px; } }
+.about-cn .about-desc {
+  background: #fff;
+  padding: 3em; 
+}
+  @media screen and (max-width: 768px) {
+	.about-cn .about-desc {
+	  padding: 2em; } }
+
+
 
 .icon-circle {
 	width: 105px;
