--- a/castlennest/css/main.css
+++ b/castlennest/css/main.css
@@ -64,6 +64,48 @@ a.btn {
   background: #ffe01a !important;
   border-color: #ffe01a !important; }
 
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  right: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px; }
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s; }
+    .sidenav a:hover {
+      color: #f1f1f1; }
+  .sidenav .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 36px;
+    margin-left: 50px;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    padding: 1px 7px 6px; }
+
+.open-nav {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 999;
+  cursor: pointer;
+  color: #fff;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  padding: 5px 10px 2px; }
+
 .nav li.show-small {
   display: none; }
 
@@ -304,7 +346,8 @@ svg:not(:root) {
   background: #fff; }
 
 .section-info {
-  margin-bottom: 55px; }
+  margin-bottom: 55px;
+  margin-top: 55px; }
   .section-info .row {
     display: -webkit-box;
     display: -webkit-flex;
@@ -450,19 +493,19 @@ svg:not(:root) {
     padding: 2em; } }
 
 .icon-circle {
-  width: 105px;
-  height: 105px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
-  background: #f7bc26;
+  background: #f5f5f5;
   display: table;
-  margin: 0 auto; }
+  margin: -65px auto 30px; }
 
 .icon-circle .icon {
   display: table;
   margin: 17px auto; }
 
 .icon-circle svg {
-  fill: #fff; }
+  fill: #FFDD00; }
 
 .col-center-block {
   float: none;
@@ -680,9 +723,13 @@ footer a {
 
 @media (min-width: 767px) {
   .sm-logo {
+    display: none; }
+  .sidenav, .open-nav {
     display: none; } }
 
 @media (max-width: 767px) {
+  .sidenav, .open-nav {
+    display: block; }
   .caption .display-tc .holder span:before, .caption .display-tc .holder span:after {
     display: none; }
   .sm-logo {
