--- a/castlennest/scss/main.scss
+++ b/castlennest/scss/main.scss
@@ -70,6 +70,53 @@ a.btn {
     border-color: #ffe01a !important;
 }
 
+.sidenav {
+	height: 100%;
+	width: 0;
+	position: fixed;
+	z-index: 9999;
+	top: 0;
+	right: 0;
+	background-color: #111;
+	overflow-x: hidden;
+	transition: 0.5s;
+	padding-top: 60px;
+	a {
+		padding: 8px 8px 8px 32px;
+		text-decoration: none;
+		font-size: 25px;
+		color: #818181;
+		display: block;
+		transition: 0.3s;
+		&:hover {
+			color: #f1f1f1;
+		}
+	}
+	.closebtn {
+		position: absolute;
+		top: 20px;
+		right: 20px;
+		font-size: 36px;
+		margin-left: 50px;
+		color:#fff;
+	border:1px solid #fff;
+	border-radius:5px;
+	padding: 1px 7px 6px; 
+	} 
+} 
+.open-nav{
+	position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 999;
+    cursor: pointer;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    padding: 5px 10px 2px;
+}
+
+
 .nav li.show-small {
 	display: none;
 }
@@ -388,7 +435,8 @@ svg:not(:root) {
 
 .section-info {
 	margin-bottom: 55px;
-	.row {
+	margin-top: 55px; 
+	.row { 
 		display: -webkit-box;
 		display: -webkit-flex;
 		display: -ms-flexbox;
@@ -568,13 +616,13 @@ svg:not(:root) {
 
 
 .icon-circle {
-	width: 105px;
-	height: 105px;
+	width: 100px;
+	height: 100px;
 	border-radius: 50%;
-	background: #f7bc26;
+	background: #f5f5f5;   
 	display: table;
-	margin: 0 auto;
-}
+	margin: -65px auto 30px;
+} 
 
 .icon-circle .icon {
 	display: table;
@@ -582,7 +630,7 @@ svg:not(:root) {
 }
 
 .icon-circle svg {
-	fill: #fff;
+	fill: #FFDD00; 
 }
 
 .col-center-block {
@@ -846,7 +894,7 @@ footer {
 	float: right;
 	clear: both;
 	a{
-		margin-top:10px !important;
+		margin-top:10px !important; 
 		float:right;
 		color: #dddddd;
 		&:hover{
@@ -872,7 +920,7 @@ footer {
 @media (min-width: 1024px) and (max-width: 1200px) {
 	.nav>li>a {
 		padding: 10px 10px;
-		font-size: 14px;
+		font-size: 14px;  
 	}
 	
 	#myCarousel .carousel-caption{
@@ -899,10 +947,16 @@ footer {
 	.sm-logo {
 		display: none;
 	}
+	.sidenav, .open-nav{  
+		display: none; 
+	}
 }
 
 @media (max-width: 767px) {
 
+	.sidenav, .open-nav{  
+		display: block; 
+	}
 	.caption .display-tc .holder span:before, .caption .display-tc .holder span:after {
 		display: none;
 	}
