--- a/castlennest/css/main.css
+++ b/castlennest/css/main.css
@@ -52,6 +52,11 @@ h5 {
 h6 {
   font-size: 18px; }
 
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; }
+
 a.btn {
   margin-top: 15px; }
 
@@ -78,12 +83,12 @@ a.btn {
   .sidenav a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 18px;
     color: #818181;
     display: block;
     transition: 0.3s; }
-    .sidenav a:hover {
-      color: #f1f1f1; }
+    .sidenav a.active, .sidenav a:hover {
+      color: #FFDD00; }
   .sidenav .closebtn {
     position: absolute;
     top: 20px;
@@ -94,6 +99,8 @@ a.btn {
     border: 1px solid #fff;
     border-radius: 5px;
     padding: 1px 7px 6px; }
+  .sidenav svg {
+    fill: #fff; }
 
 .open-nav {
   position: absolute;
@@ -104,7 +111,9 @@ a.btn {
   color: #fff;
   border: 1px solid #fff;
   border-radius: 5px;
-  padding: 5px 10px 2px; }
+  padding: 5px 7px 5px; }
+  .open-nav svg {
+    fill: #fff; }
 
 .nav li.show-small {
   display: none; }
@@ -175,7 +184,7 @@ svg:not(:root) {
   z-index: 9;
   margin: 0 auto; }
   .nav .top-menu {
-    padding: 20px 30px; }
+    padding: 20px 30px 0px; }
   .nav .logo {
     font-size: 24px;
     margin: 0;
@@ -296,7 +305,7 @@ svg:not(:root) {
 
 @media screen and (max-width: 768px) {
   .nav .top-menu {
-    padding: 28px 1em; } }
+    padding: 10px 0 0; } }
 
 @media screen and (max-width: 768px) {
   .nav .menu-1 {
@@ -305,6 +314,9 @@ svg:not(:root) {
 .full-section-2 {
   background-color: #1f1f1f;
   padding-bottom: 55px; }
+
+.inner-page.carousel {
+  height: 400px; }
 
 .services {
   text-align: center; }
@@ -319,6 +331,25 @@ svg:not(:root) {
     display: block; }
     .services i svg {
       fill: #ffab00; }
+
+.title-image {
+  overflow: hidden;
+  height: 400px;
+  position: relative; }
+  .title-image img {
+    width: 100%;
+    top: -75px;
+    position: absolute; }
+  .title-image .header-title {
+    width: 100%;
+    position: absolute;
+    bottom: 0px;
+    color: #000;
+    text-align: center;
+    display: table;
+    background: rgba(255, 255, 255, 0.5);
+    padding: 10px 0;
+    margin: 0; }
 
 .section-1 .panel-body {
   border: none;
@@ -482,7 +513,8 @@ svg:not(:root) {
     width: 100%;
     padding: 1em; }
   .about-cn .col-half.about-cn-img {
-    height: 300px; } }
+    height: 300px;
+    background-position: -303px -165px; } }
 
 .about-cn .about-desc {
   background: #fff;
@@ -524,6 +556,17 @@ svg:not(:root) {
   position: relative;
   background-repeat: no-repeat;
   z-index: 0; }
+  .caption.inner-page {
+    margin: 10px 0 25px; }
+    .caption.inner-page .display-t {
+      margin: 50px 0;
+      height: auto; }
+      .caption.inner-page .display-t h3 {
+        font-family: amatic_scregular;
+        margin-top: 10px; }
+      .caption.inner-page .display-t p {
+        color: #000;
+        letter-spacing: normal; }
   .caption .overlay {
     position: absolute;
     top: 0;
@@ -579,6 +622,54 @@ svg:not(:root) {
     .caption .display-tc .btn-custom {
       letter-spacing: 5px;
       color: #000 !important; }
+
+.sevices {
+  margin-bottom: 50px; }
+  .sevices .nav-tabs {
+    border-bottom: 1px solid #f7bc26;
+    float: left;
+    width: 100%;
+    padding: 0 25px; }
+    .sevices .nav-tabs li a {
+      padding: 8px 10px 2px;
+      color: #f7bc26;
+      border-top: 2px solid transparent;
+      border-radius: 0; }
+      .sevices .nav-tabs li a:hover {
+        border-color: #f7bc26; }
+    .sevices .nav-tabs li.active a {
+      background-color: #f5f5f5;
+      border: 1px solid #f7bc26;
+      border-bottom-color: transparent;
+      border-top: 2px solid #f7bc26;
+      color: #000; }
+
+.event-info h6 {
+  color: #000;
+  font-family: amatic_scregular;
+  background: #ffdd00;
+  font-weight: bold;
+  padding: 9px 10px 5px;
+  margin: 0 0 15px; }
+
+.event-info img {
+  width: 100%; }
+
+.event-info .event-date {
+  font-weight: bold;
+  margin: 10px 0; }
+
+.mapouter {
+  position: relative;
+  text-align: right;
+  height: 400px;
+  width: 100%; }
+
+.gmap_canvas {
+  overflow: hidden;
+  background: none !important;
+  height: 400px;
+  width: 100%; }
 
 @media screen and (max-width: 768px) {
   .video-hero {
@@ -665,6 +756,15 @@ ul.footer-li {
   .footer-li li.active a {
     color: #f7bc26; }
 
+.address p {
+  margin: 15px 0; }
+
+.address .social-net li {
+  margin-right: 10px; }
+
+.address .social-net .icon-ex-small svg {
+  fill: #f7bc26; }
+
 .footer-logo {
   width: 75%; }
 
@@ -730,6 +830,11 @@ footer a {
 @media (max-width: 767px) {
   .sidenav, .open-nav {
     display: block; }
+  .title-image img {
+    height: 100%;
+    width: auto;
+    top: 0px;
+    left: -70px; }
   .caption .display-tc .holder span:before, .caption .display-tc .holder span:after {
     display: none; }
   .sm-logo {
