--- a/arkedge/src/app/footer/footer.component.html
+++ b/arkedge/src/app/footer/footer.component.html
@@ -3,6 +3,11 @@
         <div class="row">
             <div class="col-lg-5 col-md-5 col-sm-12">
                 <div class="logo">
+                    <i class="icon icon-small">
+                        <svg focusable="false">
+                            <use xlink:href="#icon_logoFlat"></use>
+                        </svg>
+                      </i>
                 </div>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin
