--- a/arkedge/src/app/header/header.component.html
+++ b/arkedge/src/app/header/header.component.html
@@ -1,9 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" routerLink=""><i class="icon icon-small">
+    <a class="navbar-brand" routerLink="">
+      <i class="icon icon-small">
       <svg focusable="false">
-          <use xlink:href="#icon_logo"></use>
+          <use xlink:href="#icon_logoFlat"></use>
       </svg>
-    </i></a>
+    </i>
+  </a>
    <ul class="navbar-nav-list">
         <li class="nav-item">
           <a class="nav-link" routerLink="home" routerLinkActive="active" skipLocationChange=true>Home</a>
